@@ -8,3 +8,5 @@
  - Implement setting of default action for a whole category
  - Implement retrieving the current default action for a whole category
  - Implement remove for Internet services
+ - Implement add service
+ - Refactor: Don't pass iter to add/edit dialogs, just pass structure. Generate iter on the fly
